hphp/hack/test/typecheck/instanceof/instanceof_newtype.php.exp
File "instanceof_newtype.php--file2.php", line 5, characters 3-13:
  Foo
File "instanceof_newtype.php--file2.php", line 6, characters 10-11:
Invalid return type (Typing[4110])
File "instanceof_newtype.php--file2.php", line 3, characters 36-40:
This is an object of type MyFoo
File "instanceof_newtype.php--file1.php", line 6, characters 18-20:
It is incompatible with an object of type Foo
